@@ -3,7 +3,6 @@ package io.kafbat.ui.container;
 import io.confluent.kafka.schemaregistry.client.CachedSchemaRegistryClient;
 import io.confluent.kafka.schemaregistry.client.SchemaRegistryClient;
 import org.testcontainers.containers.GenericContainer;
-import org.testcontainers.containers.KafkaContainer;
 import org.testcontainers.containers.Network;
 import org.testcontainers.kafka.ConfluentKafkaContainer;
 
@@ -16,7 +15,7 @@ public class SchemaRegistryContainer extends GenericContainer<SchemaRegistryCont
   }
 
   public SchemaRegistryContainer withKafka(ConfluentKafkaContainer kafka) {
-    String bootstrapServers = kafka.getNetworkAliases().get(0) + ":9092";
+    String bootstrapServers = kafka.getNetworkAliases().getFirst() + ":9095";
     return withKafka(kafka.getNetwork(), bootstrapServers);
   }
 
